[package]
name = "voxel_server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
prometheus = "0.13"
lazy_static = "1.4"
tokio-tungstenite = "0.17"
tungstenite = "0.20"
futures-util = "0.3"
memory-stats = "1.0.0"